--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "html-pdf": "^3.0.1",
+    "html2pdf.js": "^0.10.1",
+    "jspdf": "^2.5.1",
     "material-ui-confirm": "^2.1.4",
     "md5": "^2.3.0",
+    "pdfmake": "^0.2.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.2.1",
